export const snapshot = {};

snapshot[`API Command - Help Text 1`] = `
stdout:
"
Usage: api [query]

Description:

  Make a raw GraphQL API request

Options:

  -h, --help                  - Show this help.                                                                   
  -f, --field        <field>  - String variable in key=value format                                               
  -F, --typed-field  <field>  - Typed variable in key=value format (coerces booleans, numbers, null; @file reads  
                                from path)                                                                        
  --paginate                  - Automatically fetch all pages using cursor pagination                             
  --silent                    - Suppress response output (exit code still reflects errors)                        

"
stderr:
""
`;

snapshot[`API Command - Basic Query 1`] = `
stdout:
'{"data":{"viewer":{"id":"user-1","name":"Test User"}}}'
stderr:
""
`;

snapshot[`API Command - String Variables 1`] = `
stdout:
'{"data":{"team":{"name":"Backend Team"}}}'
stderr:
""
`;

snapshot[`API Command - Typed Variables 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Issue One"},{"title":"Issue Two"}]}}}'
stderr:
""
`;

snapshot[`API Command - No Query Error 1`] = `
stdout:
""
stderr:
"✗ API request failed: No query provided
  Provide a query as an argument: linear api '{ viewer { id } }'
  Or pipe from stdin: echo '{ viewer { id } }' | linear api
"
`;

snapshot[`API Command - Invalid Variable Format 1`] = `
stdout:
""
stderr:
"✗ API request failed: Invalid variable format: badformat
  Variables must be in key=value format, e.g. -f teamId=abc
"
`;

snapshot[`API Command - GraphQL Errors Exit Non-Zero 1`] = `
stdout:
\`{"data":null,"errors":[{"message":"Cannot query field 'nonexistent' on type 'Query'"}]}\`
stderr:
""
`;

snapshot[`API Command - Silent Flag 1`] = `
stdout:
""
stderr:
""
`;

snapshot[`API Command - Typed Variable From File 1`] = `
stdout:
'{"data":{"teams":{"nodes":[{"name":"Backend"}]}}}'
stderr:
""
`;

snapshot[`API Command - Paginate 1`] = `
stdout:
'[{"title":"Issue 1"},{"title":"Issue 2"},{"title":"Issue 3"}]'
stderr:
""
`;

snapshot[`API Command - No API Key 1`] = `
stdout:
""
stderr:
"✗ API request failed: No API key configured
  Set LINEAR_API_KEY, add api_key to .linear.toml, or run \`linear auth login\`.
"
`;

snapshot[`API Command - Typed Variable Coercion Null And False 1`] = `
stdout:
'{"data":{"issues":{"nodes":[]}}}'
stderr:
""
`;

snapshot[`API Command - Value Containing Equals Sign 1`] = `
stdout:
'{"data":{"issues":{"nodes":[{"title":"Test"}]}}}'
stderr:
""
`;

snapshot[`API Command - Paginate Single Page 1`] = `
stdout:
'[{"title":"Only Issue"}]'
stderr:
""
`;

snapshot[`API Command - Paginate Non-Connection Query 1`] = `
stdout:
'{"data":{"viewer":{"id":"user-1","name":"Test"}}}'
stderr:
""
`;

snapshot[`API Command - File Not Found For Typed Variable 1`] = `
stdout:
""
stderr:
"✗ API request failed: File not found: /nonexistent/path.json
"
`;
